Fixes esl_sse compile failure in Easel (when standalone).
Failure occurs on old systems that need -msse4.1 compile flag,
including Odyssey head nodes. @SSE4_CFLAGS@ wasn't included in the
Easel Makefile.in; I only tested in HMMER3 and HMMER4 when I
distinguished between SSE vs. SSE4 vector implementations.

Fix is to have `SSE_CFLAGS = @SSE_CFLAGS@ @SSE4_CFLAGS@`, so Easel
compiles SSE code for either or both.

--- a/Makefile.in
+++ b/Makefile.in
@@ -58,7 +58,7 @@ man1ext     = .1
 CC             = @CC@
 CFLAGS         = @CFLAGS@ 
 PTHREAD_CFLAGS = @PTHREAD_CFLAGS@ 
-SSE_CFLAGS     = @SSE_CFLAGS@
+SSE_CFLAGS     = @SSE_CFLAGS@ @SSE4_CFLAGS@
 AVX_CFLAGS     = @AVX_CFLAGS@
 AVX512_CFLAGS  = @AVX512_CFLAGS@
 NEON_CFLAGS    = @NEON_CFLAGS@
