Adds esl_msashuffle_VShuffle(), and -v option to esl-shuffle miniapp
"Vertical" shuffling: shuffle residues in each alignment column
(i.e. permute each column).

Also fixes a serious bug in esl_msashuffle_Shuffle(), which had a typo
that corrupted shuffled alignments when <msa> and <shuf> are different,
which is the case for the esl-shuffle -A miniapp.

Removes -Q option (qrna pairwise shuffling) from esl-shuffle miniapp.
Appears to be dead code.

Combined with recent iss #24 fix, esl-shuffle looks a) like it was
hastily cobbled together somehow, possibly from old squid code b) like
it's unreliable. And it has no unit testing -- which it needs, asap.

--- a/miniapps/esl-shuffle.man.in
+++ b/miniapps/esl-shuffle.man.in
@@ -13,17 +13,14 @@ esl\-shuffle \- shuffling sequences or generating random ones
   (generate random sequences)
 
 \fBesl\-shuffle \-A \fR[\fIoptions\fR] \fImsafile\fR
-  (shuffle multiple sequence alignments columnwise)
-
-\fBesl\-shuffle \-Q \fR[\fIoptions\fR] \fIqrna\-alignment\-file\fR
-  (shuffle QRNA pairwise alignments)
+  (shuffle multiple sequence alignments)
 .fi
 
 .SH DESCRIPTION
 
 .PP
 .B esl\-shuffle
-is capable of four different modes of operation.
+has three different modes of operation.
 
 .PP
 By default, 
@@ -59,18 +56,10 @@ option,
 .B esl\-shuffle
 reads one or more multiple alignments from
 .I msafile
-and shuffles them columnwise.
-
-
-.PP 
-Finally, the
-.B \-Q 
-option is for shuffling pairwise alignments in QRNA input files.  A
-QRNA input file is a quasi-FASTA file, where each successive pair of
-sequences is interpreted as a pairwise alignment; sequences may
-contain gap characters (period, dash, or underscore: .\-_) and these
-pairs of sequences must have exactly the same aligned length.
-
+shuffles them, and outputs the shuffled alignments.
+By default, the alignment is shuffled columnwise
+(i.e. column order is permuted).
+Other options are listed below.
 
 
 .SH GENERAL OPTIONS
@@ -151,6 +140,11 @@ residues, preserving exact monoresidue composition in each window.
 .B \-b
 Sample columns with replacement, in order to generate a
 bootstrap-resampled alignment dataset. 
+
+.TP
+.B \-v
+Shuffle residues with each column independently; i.e., permute residue
+order in each column ("vertical" shuffling).
 
 
 .SH SEQUENCE GENERATION OPTIONS
