Adds esl-mixdchlet miniapp, and esl_subcmd module.
esl-mixdchlet miniapp reorganizes esl_mixdchlet experiment and example
drivers into a single permanent program for training mixture Dirichlet
priors. (Those drivers still need to be removed.)

esl-mixdchlet is a prototype of a program that has subcommands:
i.e. `esl-mixdchlet fit`, `esl-mixdchlet score`, etc. H4 will have a
single `hmmer` program with subcommands; this gives us a warmup to
play with.

esl_subcmd is a new module, an extension on esl_getopts, to support
programs that use subcommands.

--- a/Makefile.in
+++ b/Makefile.in
@@ -165,6 +165,7 @@ HDRS = 	easel.h\
 	esl_stats.h\
 	esl_stopwatch.h\
 	esl_stretchexp.h\
+	esl_subcmd.h\
 	esl_threads.h\
 	esl_tree.h\
 	esl_vectorops.h\
@@ -239,6 +240,7 @@ OBJS =	easel.o\
 	esl_stats.o\
 	esl_stopwatch.o\
 	esl_stretchexp.o\
+	esl_subcmd.o\
 	esl_threads.o\
 	esl_tree.o\
 	esl_vectorops.o\
@@ -352,6 +354,7 @@ ${VMX_UTESTS}:     SIMD_CFLAGS= ${VMX_CFLAGS}
 
 
 EXPERIMENTS = \
+	esl_mixdchlet_experiment \
 	esl_scorematrix_experiment
 
 SSE_EXPERIMENTS     = 
@@ -432,6 +435,7 @@ EXAMPLES = \
         esl_hyperexp_example\
         esl_keyhash_example\
         esl_minimizer_example\
+	esl_mixdchlet_example\
         esl_mixgev_example\
         esl_msafile_example\
 	esl_msafile_a2m_example\
