Improves esl_min_ConjugateGradientDescent(), and changes its arguments.
Tunable parameters for the optimizer can now be customized with an
ESL_MIN_CFG object; or pass NULL to get defaults.

A table of statistics (rows = each iteration) can be collected with an
ESL_MIN_DAT object; or pass NULL.

The old arguments:
   (x, u, n, (*func)(), (*dfunc)(), prm, tol, wrk, &fx)
Easiest change:
   (NULL, x, n, (*func)(), (*dfunc)(), prm, &fx, NULL)

i.e. delete u (initial step size), tol (relative tolerance for
convergence), and wrk (allocated working memory). u and tol are now in
the configuration, and the minimizer now allocates its own space.
The first NULL is the optional configuration ptr, the second NULL is
the optional data-collection ptr.

Adds esl_minimizer_utest.

--- a/Makefile.in
+++ b/Makefile.in
@@ -294,6 +294,7 @@ UTESTS =\
 	esl_keyhash_utest\
 	esl_matrixops_utest\
 	esl_mem_utest\
+	esl_minimizer_utest\
 	esl_mixdchlet_utest\
 	esl_msa_utest\
 	esl_msacluster_utest\
@@ -328,7 +329,6 @@ UTESTS =\
 	esl_weibull_utest\
 	esl_wuss_utest
 #	gev_utest\
-#	minimizer_utest\
 #	mixgev_utest\
 #	mpi_utest\
 #	paml_utest\
