Adds esl_json : JSON format parsing.
I'm planning to have H4 use JSON format for profile HMM files,
probably elsewhere too. This will let people load HMMER data into
Python, Jupyter, etc. without having to write specialized parsers for
our formats.

I looked into existing JSON C libraries and studied one widely
recommended one in detail, Jasmine (https://github.com/zserge/jsmn),
by Serge Zaitsev. I like the way it's designed. It's compact, it
(somewhat) uses zero-copy methods, claims to be an efficient
single-pass algorithm, and it generically parses a JSON input string
into a tokenized parse tree, without needing to know anything about
semantics of the data; your application can then digest the parse tree
without needing to know about JSON syntax. On the other hand, Jasmine
failed to accurately parse HMMER prototype JSON files (silently
corrupting 2D numerical arrays), and is not efficient on large files
(it's actually multipass, not single-pass). I didn't look into the
corruption source, but instead just decided we need our own code,
especially since I need something that will scale, allowing
incremental parsing of streamed data.

The esl_json module provides full or incremental JSON parsing, with
two main API calls (esl_json_Parser() and esl_json_PartialParse()).
They use ESL_BUFFER's facilities for streaming data efficiently from
different sources (including zero-copy mmap()'ed files on disk, and
decompressing gzip'ed files). ESL_JSON is a parse tree structure,
composed of ESL_JSON_TOK nodes. A ESL_JSON_PARSER object keeps precise
parser state information so a parse can stop at any byte of an input
stream chunk and pick up again on the next byte, which is critical for
the ability to incrementally parse a large stream.

esl_json_SampleDirty() is a lawful evil JSON string generator: it
randomly samples a syntactically correct string from the RFC8259 (Dec
2017) JSON ABNF (augmented Backnus-Naur form) grammar. It includes
UTF-8 encoded UNICODE codepoints up to four 

--- a/Makefile.in
+++ b/Makefile.in
@@ -123,6 +123,7 @@ HDRS = 	easel.h\
 	esl_hmm.h\
 	esl_huffman.h\
 	esl_hyperexp.h\
+	esl_json.h\
 	esl_keyhash.h\
 	esl_matrixops.h\
 	esl_mem.h\
@@ -200,6 +201,7 @@ OBJS =	easel.o\
 	esl_hmm.o\
 	esl_huffman.o\
 	esl_hyperexp.o\
+	esl_json.o\
 	esl_keyhash.o\
 	esl_matrixops.o\
 	esl_mem.o\
@@ -291,6 +293,7 @@ UTESTS =\
 	esl_hmm_utest\
 	esl_huffman_utest\
 	esl_hyperexp_utest\
+	esl_json_utest\
 	esl_keyhash_utest\
 	esl_matrixops_utest\
 	esl_mem_utest\
@@ -354,7 +357,6 @@ ${VMX_UTESTS}:     SIMD_CFLAGS= ${VMX_CFLAGS}
 
 
 EXPERIMENTS = \
-	esl_mixdchlet_experiment \
 	esl_scorematrix_experiment
 
 SSE_EXPERIMENTS     = 
@@ -433,6 +435,7 @@ EXAMPLES = \
         esl_hmm_example\
 	esl_huffman_example\
         esl_hyperexp_example\
+	esl_json_example\
         esl_keyhash_example\
         esl_minimizer_example\
 	esl_mixdchlet_example\
