esl-shuffle.itest.py now checks for python 3
esl-shuffle.itest.py requires python 3. Fails on Ubuntu 16.04, which
has python 2.7 by default. Can work around `print()` issues with `from
__future__`, but `subprocess.run` is also a problem.

Inserted a test for python >= 3; otherwise "succeed" with a message.
Automated sqc `make check` now sees this result as "ok".

This problem will arise more generally as I try to replace Perl with
Python in the scripted tests. sqc should have a way to distinguish
tests that succeed, tests that fail, and tests that can't be run.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ miniapps/esl-compstruct
 miniapps/esl-construct
 miniapps/esl-histplot
 miniapps/esl-mask
+miniapps/esl-mixdchlet
 miniapps/esl-reformat
 miniapps/esl-selectn
 miniapps/esl-seqrange
