Adds esl_rand64_int64(); random signed 64-bit integers.
Also adds some notes to esl_rand64 and esl_random as I get ready to
move on:

- Noted that new PCG family of PRNGs will be worth looking into.

- Noted that Nishimura and Matsumoto have replaced the method for
  seeding the 32-bit Mersenne Twister with a better one. Decided
  against changing our code, because anything that changes our PRNG
  output means having to review all tests that use it with a fixed
  seed, that may depend on a reproducible sequence.

- Deprecated esl_randomness_CreateFast(). No good reason to use the
  inferior Knuth LCG any more. As above, didn't remove it, because we
  have tests that use it.

- Noted that esl_rnd_Roll() has a potentially large numerical error
  for large numbers; esl_rand64_Roll() is a more numerically correct
  implementation.

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -67,6 +67,9 @@ PROGS = esl-afetch\
         esl-translate\
 	esl-weight
 
+SUBCMDOBJS = \
+	cmd_sample.o
+
 # beautification magic stolen from git 
 #
 QUIET_SUBDIR0 = +${MAKE} -C #space separator after -c
@@ -83,13 +86,19 @@ endif
 
 .PHONY: all dev tests check install uninstall clean distclean 
 
-all: 	${PROGS}
-dev:    ${PROGS}
-tests:  ${PROGS}
-check:  ${PROGS}
+all: 	${PROGS} easel
+dev:    ${PROGS} easel
+tests:  ${PROGS} easel
+check:  ${PROGS} easel
+
+easel:  easel.c ../libeasel.a ${SUBCMDOBJS}
+	${QUIET_GEN}${CC} ${CFLAGS} ${PTHREAD_CFLAGS} ${DEFS} ${LDFLAGS} -L.. -I. -I.. -I${srcdir} -I${srcdir}/.. -o $@ easel.c ${SUBCMDOBJS} ${LIBS}
 
 ${PROGS}: % : %.c ../libeasel.a 
 	${QUIET_GEN}${CC} ${CFLAGS} ${PTHREAD_CFLAGS} ${DEFS} ${LDFLAGS} -L.. -I. -I.. -I${srcdir} -I${srcdir}/.. -o $@ $< ${LIBS}
+
+${SUBCMDOBJS}: %.o : %.c ../libeasel.a
+	${QUIET_CC}${CC} -I. -I.. -I${srcdir} -I${srcdir}/.. ${CFLAGS} ${PTHREAD_CFLAGS} ${SIMD_CFLAGS} ${DEFS} -c $<
 
 install: ${PROGS} 
 	for file in ${PROGS}; do \
