Adds `easel` miniapp and its first subcommand, `easel downsample`.
I'm going to start switching the Easel miniapps slowly over to the new
subcommand style, `easel <subcommand>` instead of `esl-<subcommand>`.
HMMER4 will also use this style with `hmmer <subcommand>`.

`easel downsample` is the first such miniapp. It adapts esl-selectn,
and extends it to be able to sample sequences, not just lines.

--- a/miniapps/esl-selectn.man.in
+++ b/miniapps/esl-selectn.man.in
@@ -54,17 +54,11 @@ all options, including expert options.
 .BI \-\-seed " <d>"
 Set the random number seed to
 .I <d>,
-an integer greater than 0. 
-The default is to use the current value of
-.B time().
-(As the return value of
-.B time()
-is likely to be in units of seconds,
-two calls to 
-.B esl\-selectn
-within the same second will generate exactly the
-same sample; this may not be what you want.)
-
+an integer >= 0.
+The default is 0, which means to use a randomly selected seed.
+A seed > 0 results
+in reproducible identical samples from different runs of the same
+command.
 
 
 .SH SEE ALSO
