esl_dsqdata now uses multiple unpacker threads; number hardcoded for now.
SSD disk speeds have caught CPU speeds; my laptop can read at 3.5GB/s,
whereas the unpacker unpacks at around 2.0 Gres/s. Single unpacker thread
is now a bottleneck on machines with fast drives, especially for DNA
input (compressed to 3.75nt/byte).

Rethought the esl_dsqdata design [H5/147] and reimplemented to use
multiple unpackers, currently hardcoded to 4 [H5/148]. The design
assigns input chunks to unpackers round robin, so that input order is
preserved if there is a single thread doing Read() calls; seemed like
this might be a useful property. If there are multiple threads calling
_Read(), order isn't preserved, but one could design a different
version of _Read with appropriate synchronization if needed.

Protein read times improve about 2x (1.65s -> 0.78s on my ~3.4Gaa
benchmark); DNA read times improve about 3x (5.53s -> 1.75s on my
10Gnt benchmark).

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -91,8 +91,8 @@ dev:    ${PROGS} easel
 tests:  ${PROGS} easel
 check:  ${PROGS} easel
 
-easel:  easel.c ../libeasel.a ${SUBCMDOBJS}
-	${QUIET_GEN}${CC} ${CFLAGS} ${PTHREAD_CFLAGS} ${DEFS} ${LDFLAGS} -L.. -I. -I.. -I${srcdir} -I${srcdir}/.. -o $@ easel.c ${SUBCMDOBJS} ${LIBS}
+easel:  % : %.c ../libeasel.a ${SUBCMDOBJS}
+	${QUIET_GEN}${CC} ${CFLAGS} ${PTHREAD_CFLAGS} ${DEFS} ${LDFLAGS} -L.. -I. -I.. -I${srcdir} -I${srcdir}/.. -o $@ $< ${SUBCMDOBJS} ${LIBS}
 
 ${PROGS}: % : %.c ../libeasel.a 
 	${QUIET_GEN}${CC} ${CFLAGS} ${PTHREAD_CFLAGS} ${DEFS} ${LDFLAGS} -L.. -I. -I.. -I${srcdir} -I${srcdir}/.. -o $@ $< ${LIBS}
