configure and make now test for python3; 'make check' disabled if not found.
As I'm starting to use more Python than Perl, we're starting to have
some dependencies on Python scripts. Unfortunately Python environments
are even less standardized than Perl. We can't count on python3 being
available. Harvard Odyssey cluster is an example, where there is no
python3 by default (need to do 'module install python' to activate a
python3 environment). Most of our Python dependency is and will be
developer-facing, and we can count on our own machines having python3
installed. However, an example of a user-facing dependency is in 'make
check', with `esl-shuffle.itest.py`. This test fails on Odyssey due to
missing python3.

Add AC_PATH_PROG to configure.ac to find python3.
Disable 'make check' in main Makefile.in and testsuite/Makefile.in if not.
Have configure warn if 'make check' is disabled.

I'm about to check in similar changes to HMMER3, Infernal. Other
programs that depend on Easel may want to make these changes too
(R-scape).

I don't believe any of our user-facing 'make pdf' documentation
depends on python yet, but that's another place where we may need
similar checking in the future.

--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -11,6 +11,7 @@ LDFLAGS        = @LDFLAGS@
 DEFS           = @DEFS@
 LIBS           = @LIBGSL@ @LIBS@ -lm
 MPILIBS        = @MPILIBS@
+PYTHON3        = @PYTHON3@
 
 SQCLEVEL = 2
 
@@ -28,12 +29,20 @@ endif
 .PHONY: check dcheck clean distclean
 
 check:
+	@if ! test ${PYTHON3}; then\
+	    echo "No python3 found. 'make check' self tests are disabled.";\
+	    exit 1;\
+	fi
 	@echo 
 	@echo Running Easel test suite...
 	@echo
 	@${srcdir}/../devkit/sqc ${SQCLEVEL} ${srcdir}/testsuite.sqc .. ${srcdir}/..
 
 dcheck: 
+	@if ! test ${PYTHON3}; then\
+	    echo "No python3 found. 'make dcheck' self tests are disabled.";\
+	    exit 1;\
+	fi
 	@echo    Running developer testsuite...
 	@echo -n Compiling for unit tests and valgrind tests...
 	@(cd ..; make clean > /dev/null; testsuite/${top_srcdir}/configure --enable-debugging >/dev/null; make dev > /dev/null)       
