Improves handling of `make check` dependency on python3
As Nick points out, if python3 detection is only at ./configure-time,
then a user could get a "you have no python3" warning then fix their
environment (`module load python`), but `make check` still won't work
until they configure again. I'd actually documented this already in H3
install guide, but nobody reads documentation, so principle of least
surprise should apply.

We already use a better alternative method in HMMER userguide, where
Makefile tests for presence of `rman` using the ungoogleable shell
subcommand `command -v`.

Now `make check`, `make dcheck` use the `command -v` test instead of
testing against a @PYTHON3@ configure output variable substitution.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ Makefile
 /decoy_config.h
 /esl_config.h
 /libeasel.a
+/autom4te.cache
+/build-*/
 *.o
 *.dSYM
 easel_utest
@@ -16,6 +18,7 @@ esl_*_example?
 esl_*_benchmark
 esl_*_experiment
 miniapps/*.man
+miniapps/easel
 miniapps/esl-afetch
 miniapps/esl-alimanip
 miniapps/esl-alimap
