`easel alistat` miniapp subcommand added
Combines old `alistat` and `alistat -1` with alirecsize
(2016/0425-msa-size), but without all of alistat's auxiliary output
files, at least for now. Tabular output shows record size on disk in
bytes, and ratio of size/nres in the alignment.

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -68,6 +68,7 @@ PROGS = esl-afetch\
 	esl-weight
 
 SUBCMDOBJS = \
+	cmd_alistat.o    \
 	cmd_downsample.o
 
 # beautification magic stolen from git 
