--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -32,6 +32,8 @@
 
 #undef eslHAVE_NEON_AARCH64
 
+#undef eslENABLE_CUDA  // Should we build CUDA acceleration?
+
 #undef HAVE_FLUSH_ZERO_MODE        // on x86 platforms: we can turn off denormalized floating point math,
 #undef HAVE_DENORMALS_ZERO_MODE    //   which often incurs performance penalty. See simdvec.md in HMMER.
 
