--- a/Makefile.in
+++ b/Makefile.in
@@ -99,6 +99,7 @@ HDRS = 	easel.h\
 	esl_alphabet.h\
 	esl_arr2.h\
 	esl_arr3.h\
+	esl_bitfield.h\
 	esl_avx.h\
 	esl_avx512.h\
 	esl_buffer.h\
@@ -181,6 +182,7 @@ OBJS =	easel.o\
 	esl_alphabet.o\
 	esl_arr2.o\
 	esl_arr3.o\
+	esl_bitfield.o\
 	esl_buffer.o\
 	esl_cluster.o\
 	esl_composition.o\
@@ -277,6 +279,7 @@ UTESTS =\
 	easel_utest\
 	esl_alloc_utest\
 	esl_alphabet_utest\
+	esl_bitfield_utest\
 	esl_buffer_utest\
 	esl_cluster_utest\
 	esl_cpu_utest\
