Have .travis.yml install python3 in the build environment.
Otherwise esl-shuffle itest (and other future python3-based tests) will fail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: c
 env:
   - SQC_NONZERO_EXIT=1
 
+before_install:
+  - sudo apt-get install python3
+
 script:
   - autoconf
   - ./configure
