Another test of why `make check` is failing in travis-ci. [ignore this commit]

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,11 @@ dist: xenial
 env:
   - SQC_NONZERO_EXIT=1
 
-before_install:
-  - sudo apt-get install python3
-
 script:
   - autoconf
   - ./configure
   - make
   - make dev
+  - miniapps/esl-shuffle.itest.py . . foo
   - make check
 
