Removes subprocess.run() dependency.
The failure turned out to be that although subprocess.run() requires
Python 3.5+, its `encoding` argument requires Python 3.6+ (and
travis-ci xenial build environment uses 3.5). In general, the Python
subprocess module is a comical mess. What Perl can do with two
punctuation marks takes a complex block of Python code and exception
handling.  subprocess.run probably should only be used when you know
you're only coding for one up-to-date Python environment - not
production code.

So, decided that the better policy is to not introduce dependency on
Python 3.5+ features, since the default travis-ci build environment
only supports 3.4, and also because we're always had a policy of
supporting the broadest range of systems we can.

Replaced subprocess.run() with subprocess.check_output() calls.

--- a/configure.ac
+++ b/configure.ac
@@ -404,24 +404,11 @@ else
 fi
 
 
-# We need python, specifically python3, for 'make check' and
-# some dev tools; moreover, we need python3 >= 3.5, to
-# support subprocess.run(). sqc checks for itself, but 
-# we also check in ./configure, so we don't recommend
-# 'make check' to the user if they can't use it.
+# We need python 3 for 'make check' and some dev tools. sqc checks
+# too, as does the Makefile, but we also check in ./configure, so we
+# don't recommend 'make check' to the user if they can't use it.
 # 
 AC_CHECK_PROG(HAVE_PYTHON3, python3, yes)
-if test x"$HAVE_PYTHON3" = x"yes"; then
-  AC_MSG_CHECKING([whether python3 supports subprocess.run])
-  output=`python3 -c 'import subprocess; print("run" in dir(subprocess))'`
-  if test x"${output}" = x"True"; then
-    AC_DEFINE([HAVE_PYTHON3_SUBPROCESS_RUN],1,[Support Python >=3.5 subprocess.run()])
-    python3_ok="yes"
-    AC_MSG_RESULT([yes])
-  else
-    AC_MSG_RESULT([no])
-  fi
-fi  
 
 
 ################################################################
@@ -637,11 +624,11 @@ Vector implementations enabled:
            vmx: $enable_vmx"
 
 
-if test x"$python3_ok" = x"yes"; then echo "
+if test x"$HAVE_PYTHON3" = x"yes"; then echo "
 Now do 'make' to build Easel, and optionally:
        'make check' to run self-tests.";
 else echo "
-(No python3 >= version 3.5 found, so 'make check' is disabled.)
+(No python3 found, so 'make check' is disabled.)
 
 Now do 'make' to build Easel.";
 fi
