--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -11,7 +11,6 @@ LDFLAGS        = @LDFLAGS@
 DEFS           = @DEFS@
 LIBS           = @LIBGSL@ @LIBS@ -lm
 MPILIBS        = @MPILIBS@
-PYTHON3        = @PYTHON3@
 
 SQCLEVEL = 2
 
@@ -29,20 +28,15 @@ endif
 .PHONY: check dcheck clean distclean
 
 check:
-	@if ! test ${PYTHON3}; then\
-	    echo "No python3 found. 'make check' self tests are disabled.";\
-	    exit 1;\
-	fi
+	@command -v python3 >/dev/null 2>&1 || { echo >&2 "python3 is required for 'make check', but is not in your PATH. Aborting."; exit 1; }
 	@echo 
 	@echo Running Easel test suite...
 	@echo
 	@${srcdir}/../devkit/sqc ${SQCLEVEL} ${srcdir}/testsuite.sqc .. ${srcdir}/..
 
 dcheck: 
-	@if ! test ${PYTHON3}; then\
-	    echo "No python3 found. 'make dcheck' self tests are disabled.";\
-	    exit 1;\
-	fi
+	@command -v python3 >/dev/null 2>&1 || { echo >&2 "python3 is required for 'make dcheck', but is not in your PATH. Aborting."; exit 1; }
+	@echo
 	@echo    Running developer testsuite...
 	@echo -n Compiling for unit tests and valgrind tests...
 	@(cd ..; make clean > /dev/null; testsuite/${top_srcdir}/configure --enable-debugging >/dev/null; make dev > /dev/null)       
