fix hmmer make check after configure --with-gsl

--- a/Makefile.in
+++ b/Makefile.in
@@ -67,7 +67,7 @@ VMX_CFLAGS     = @VMX_CFLAGS@
 CPPFLAGS       = @CPPFLAGS@
 LDFLAGS        = @LDFLAGS@
 LIBGSL         = @LIBGSL@
-LIBS           = @LIBS@ @PTHREAD_LIBS@
+LIBS           = @LIBS@ @PTHREAD_LIBS@ @LIBGSL@
 
 
 # Other tools
