Adds `easel index` subcommand for SSI indexing; with -U UniProt option
easel miniapp now has index subcommand, reproducing the indexing
functionality of esl-sfetch --index.

`easel index -U <seqfile>` adds parsing of UniProt long names, like
"sp|Q8TAQ2|SMRC2_HUMAN", to extract and index the accession and
identifier, so we can fetch by "SMRC2_HUMAN" alone.

Converted most of esl_regexp documentation to Markdown, in
esl_regexp.md.

This is a first draft of these changes. The indexing is slow, and I'm
going to put in some optimizations. Also, esl-sfetch can't fetch
SMRC2_HUMAN yet, because it's checking that the fetched seq has the
same name as the requested key; I'll need to change the logic of that
validation.

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -70,7 +70,8 @@ PROGS = esl-afetch\
 SUBCMDOBJS = \
 	cmd_alistat.o    \
 	cmd_downsample.o \
-	cmd_filter.o
+	cmd_filter.o     \
+	cmd_index.o
 
 # beautification magic stolen from git 
 #
