Use autoconf to detect if `fstat` is available instead of `_POSIX_VERSION`

--- a/configure.ac
+++ b/configure.ac
@@ -523,6 +523,7 @@ AX_GCC_FUNC_ATTRIBUTE(format)
 AC_CHECK_FUNCS([ \
   aligned_alloc  \
   erfc           \
+  fstat          \
   getpid         \
   getppid        \
   _mm_malloc     \
