Use `_putenv_s` instead of `setenv` in `esl_getopts` if `setenv` if not available

--- a/configure.ac
+++ b/configure.ac
@@ -532,6 +532,8 @@ AC_CHECK_FUNCS([ \
   _mm_malloc     \
   popen          \
   posix_memalign \
+  _putenv_s      \
+  setenv         \
   strcasecmp     \
   strsep         \
   sysconf        \
